# Protocolist

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml  requirements.txt
interfaces/: interfaces.py
src/interfacer/: ProtocolDict.py  add_inheritance.py  annotation2string.py  apply_pytype.py  config.py  construct_full_class.py  consts.py  extract_bases.py  extract_methods_and_fields.py  fields_methods_extractor.py  get_external_library_classes.py  get_mypy_exceptions.py  import2path.py  main.py  protocol_dict.py  structure_interfaces.py  to_camelcase.py  transaction.py
src/protocolist/: add_inheritance.py  config.py  construct_full_class.py  consts.py  convert_relative_to_absolute.py  extract_annotations.py  extract_bases.py  extract_methods_and_fields.py  fields_methods_extractor.py  get_external_library_classes.py  get_mypy_exceptions.py  link_files_by_imports.py  main.py  protocol_dict.py  remove_star_imports.py  sort_files_by_import_order.py  sort_paths_by_import_links.py  supports_getitem.py  to_camelcase.py  transaction.py
tests/: class_inheritance.py  test.py  test_base.py  test_both.py  test_char_sequence.py  test_class.py  test_classes.py  test_combined.py  test_file.py  test_math.py  test_max_length.py  test_multiprocess.py  test_no_changes.py  test_optional_protocols.py  test_partial.py  test_recursive_type.py  test_subscript.py  test_supports_getitem_option.py  test_supports_index.py  tests.py
tests/delete_tweet/: auth.py  create_tweets.py  delete_tweets.py  env_variables.py  get_tweets.py  main.py
(+163 files in other folders)
