[tool.poetry]
name = "protocolist"
version = "0.1.0"
description = "Fills missing types and creates protocal instances to interface"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
libcst = "^1.4.0"
toml = "^0.10.2"
mypy = "^1.13.0"
more-itertools = "^10.5.0"
reorder-python-imports = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
protocolist = "protocolist.main:main"
